option('dbus_services_dir',
       description: 'Location of the DBus services',
       type: 'string',
       value: 'default')
option('dbus_daemon',
       description: 'The path of the DBus daemon',
       type: 'string',
       value: 'default')
option('dbus_broker',
       description: 'The path of the DBus broker',
       type: 'string',
       value: 'default')
option('default_bus',
       description: 'The default DBus implementation to use',
       type: 'combo',
       choices: ['dbus-daemon', 'dbus-broker'],
       value: 'dbus-daemon')
option('systemd_user_dir',
       description: 'Location of the systemd user services',
       type: 'string',
       value: 'default')
option('docs',
       description: 'Generate API reference for atspi (requires GTK-Doc)',
       type: 'boolean',
       value: false)
option('introspection',
       description: 'Enable GObject Introspection (depends on GObject)',
       type: 'combo',
       choices: ['yes', 'no', 'auto'],
       value: 'auto')
option('x11',
       description: 'Enable X11 support',
       type: 'combo',
       choices: ['yes', 'no', 'auto'],
       value: 'auto')
option('disable_p2p',
       description: 'Disable peer-to-peer DBus connections for at-spi2-atk',
       type: 'boolean',
       value: false)
